--- a/src/sass/event.scss
+++ b/src/sass/event.scss
@@ -230,21 +230,22 @@
 }
 
 #addEvent {
-    top: 50%;
-    left: 50%;
-    width: 800px;
-    margin-left: -400px;
-    height: 600px;
-    margin-top: -300px;
+    // top: 50%;
+    // left: 50%;
+    // width: 800px;
+    // margin-left: -400px;
+    // height: 600px;
+    // margin-top: -300px;
     border-radius: 8px;
     font-size: 14px;
-    overflow: hidden;
+    // overflow: hidden;
     .modal-lg {
-        margin: 0;
-        width: 100%;
+        // margin: 0;
+        // width: 100%;
         .modal-content {
             width: 800px;
             height: 600px;
+            margin: 0 auto;
             .modal-header {
                 height: 38px;
                 background: #344052;
@@ -284,6 +285,9 @@
                             padding-right: 38px;
                             background: #fff;
                             cursor: pointer;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
                         }
                         .form-control-feedback {
                             right: 20px;
@@ -449,16 +453,18 @@
 
 #event_address {
     @extend #addEvent;
-    width: 600px;
-    height: 400px;
-    margin-left: -300px;
-    margin-top: -200px;
+    // width: 600px;
+    // height: 400px;
+    // margin-left: -300px;
+    // margin-top: -200px;
     .modal-lg {
-        margin: 0;
-        width: 100%;
+        // margin: 0;
+        // width: 100%;
+        margin-top: 120px;
         .modal-content {
             width: 600px;
             height: 400px;
+            // margin: 0 auto;
             .modal-body {
                 height: 310px;
                 padding: 0;
@@ -552,11 +558,11 @@
 
 #stakeholder {
     @extend #addEvent;
-    width: 500px;
-    margin-left: -250px;
+    // width: 500px;
+    // margin-left: -250px;
     .modal-lg {
-        margin: 0;
-        width: 100%;
+        // margin: 0;
+        // width: 100%;
         .modal-content {
             width: 500px;
         }
