--- a/src/sass/details_common.scss
+++ b/src/sass/details_common.scss
@@ -1,19 +1,20 @@
 #details {
-    top: 50%;
-    left: 50%;
-    width: 800px;
-    margin-left: -400px;
-    height: 600px;
-    margin-top: -300px;
+    // top: 50%;
+    // left: 50%;
+    // width: 800px;
+    // margin-left: -400px;
+    // height: 600px;
+    // margin-top: -300px;
     border-radius: 8px;
     font-size: 14px;
-    overflow: hidden;
+    // overflow: hidden;
     .modal-lg {
-        margin: 0;
-        width: 100%;
+        // margin: 0;
+        // width: 100%;
         .modal-content {
             width: 800px;
             height: 600px;
+            margin: 0 auto;
             .modal-header {
                 height: 40px;
                 background: #344052;
@@ -66,6 +67,8 @@
                                 background: #fff;
                                 min-height: 36px;
                                 border-left: 1px solid #ddd;
+                                word-wrap: break-word;
+                                word-break: normal;
                                 p {
                                     margin: 0;
                                 }
