--- a/src/sass/help.scss
+++ b/src/sass/help.scss
@@ -18,6 +18,10 @@
     float: left;
 }
 
+.mt10 {
+    margin-top: 10px;
+}
+
 .center {
     text-align: center;
     border-bottom: 1px solid #ececec;
@@ -39,6 +43,11 @@ html {
 .kuai2 {
     height: 100%;
     display: none;
+    img {
+        margin: 10px 0px;
+        width: 280px;
+        height: 320px;
+    }
 }
 
 .kuai3 {
@@ -76,6 +85,7 @@ html {
 
 .changeOne p {
     line-height: 20px;
+    margin: 0;
     font-size: 16px;
     color: #666;
     word-break: normal;
@@ -88,8 +98,14 @@ html {
 }
 
 .comcss {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #e4e4e4;
+}
+
+b {
+    margin-top: 10px;
+    font-weight: bold;
+    display: block;
 }
 
 
@@ -265,4 +281,20 @@ html {
 .row {
     margin-left: 0;
     margin-right: 0
+}
+
+.return {
+    width: 100px;
+    height: 40px;
+    margin: 0 auto;
+}
+
+.return .btn {
+    color: #59B6FC;
+    font-size: 20px;
+}
+
+.return .btn:hover {
+    color: #59B6FC;
+    text-decoration: none;
 }
