--- a/src/sass/map.scss
+++ b/src/sass/map.scss
@@ -3,6 +3,9 @@ $blue: #51b7ff;
     display: none;
 }
 
+label{
+    max-width: none;
+}
 @mixin hidd {
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -151,6 +154,7 @@ body {
             }
             .result {
                 max-height: 500px;
+                overflow-y: auto;
                 ul {
                     li {
                         height: 35px;
@@ -238,6 +242,7 @@ body {
             }
         }
         .tool_wrapper {
+            width : 86px;
             box-shadow: 0px 0px 12px #888;
             position: absolute;
             right: 0;
@@ -270,7 +275,35 @@ body {
                 }
             }
         }
+        .search_location{
+            .search_wrapper {
+                overflow: hidden;
+                border: 2px solid $blue;
+                height: 31px;
+                width: 330px;
+                margin: 10px auto;
+                background: #fff;
+                input {
+                    float: left;
+                    height: 27px;
+                    width: 100%;
+                    line-height: 27px;
+                    outline: none;
+                    -webkit-appearance: none;
+                    border: none;
+                    padding-left: 8px;
+                }
+                span {
+                    cursor: pointer;
+                    float: right;
+                    width: 44px;
+                    height: 27px;
+                    background: $blue url(/src/images/map/icon_search.png) no-repeat center center;
+                }
+            }
+        }
     }
+
 }
 
 
@@ -380,6 +413,55 @@ body {
                     top: 0;
                     left: 0;
                     cursor: pointer;
+                }
+                .event_line {
+                    height: 100%;
+                    width: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    .item {
+                        position: absolute;
+                        left: 0;
+                        bottom: 8px;;
+                        margin-left: -9px;
+                        height: 26px;
+                        width: 18px;
+                        cursor: pointer;
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis2{
+                            background: url(/src/images/event/dis2.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+                        &.dis1{
+                            background: url(/src/images/event/dis1.png) no-repeat 0 0;
+                            background-size: 18px 26px;
+                        }
+
+                    }
                 }
                 .move_bar {
                     position: absolute;
