--- a/src/sass/map_test.scss
+++ b/src/sass/map_test.scss
@@ -10,6 +10,10 @@
     float: right
 }
 
+.maxHeight {
+    max-height: 100px;
+}
+
 .width {
     display: block;
     width: 65px;
@@ -71,6 +75,9 @@
 .borderLeft {
     border-left: 1px solid #ccc;
     padding-left: 10px;
+    img {
+        cursor: pointer;
+    }
 }
 
 // 人员开始
@@ -87,6 +94,18 @@
     img {
         padding-left: 10px;
     }
+    span {
+        display: inline-block;
+        width: 29px;
+        height: 16px;
+        cursor: pointer;
+        vertical-align: middle;
+        margin-left: 10px;
+        background: url(/src/images/map/close.png) no-repeat;
+        &.active {
+            background: url(/src/images/map/open.png) no-repeat;
+        }
+    }
 }
 
 #accordion {
@@ -95,16 +114,22 @@
     position: absolute;
     top: 105px;
     right: 40px;
+    z-index: 999;
+    box-shadow: 0px 0px 12px #888;
     .panel {
         width: 228px;
         height: 100%;
         margin: 0;
+        .panel-title {
+            cursor: pointer;
+        }
         a {
             text-decoration: none;
             border-radius: 50%;
         }
         p {
-            height: 20px;
+            height: 22px;
+            // line-height: 22px;
             font-size: 12px;
             color: #666;
             text-align: left;
@@ -113,7 +138,7 @@
         .viewDetails {
             width: 178px;
             height: 30px;
-            margin-left: 10px;
+            margin-left: 15px;
             margin-top: 10px;
             font-size: 12px;
             background: #fff;
@@ -124,35 +149,48 @@
         }
     }
     .personnel {
-        background: #686866;
+        background: rgba(88, 88, 88, 0.9);
         height: 37px;
         line-height: 37px;
         color: #fff;
         padding-left: 10px;
+        .close_inspect {
+            display: inline-block;
+            width: 20px;
+            font-size: 20px;
+            cursor: pointer;
+            background: url(/src/images/map/closed.png) center no-repeat;
+            margin-right: 10px;
+        }
     }
     .message {
         width: 228px;
-        height: 177px;
+        height: 122px;
         overflow: hidden;
         background: #fff;
         .essentialInformation {
             width: 198px;
-            height: 157px;
+            height: 112px;
             margin: 0 auto;
             margin-top: 10px;
             .peopleInformation {
                 width: 100%;
-                height: 85px;
-                margin-bottom: 10px;
+                height: 63px;
+                // margin-bottom: 10px;
                 overflow: hidden;
                 .left {
                     width: 55px;
-                    height: 79px;
+                    height: 55px;
                     margin-top: 3px;
+                    .inspectImg {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 50%
+                    }
                 }
                 .right {
                     width: 128px;
-                    height: 85px;
+                    height: 63px;
                     margin-left: 15px;
                     p {
                         height: 21px;
@@ -160,17 +198,61 @@
                         line-height: 21px;
                         text-align: left;
                         margin: 0;
+                        .inspectUseName {
+                            display: block;
+                            max-width: 65px;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                        }
+                        .isOnline {
+                            cursor: pointer;
+                        }
+                        .dynamicTitle {
+                            // display: block;
+                            width: 8px;
+                            height: 12px;
+                            margin-left: 10px;
+                            cursor: pointer;
+                        }
+                        .inspectDepartment {
+                            display: block;
+                            width: 145px;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                        }
+                        .inspectRoleName {
+                            display: block;
+                            width: 145px;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                        }
                     }
                 }
             }
             .patrolInformation {
                 width: 198px;
-                height: 60px;
+                height: 45px;
                 overflow: hidden;
+                text-align: center;
+                .left {
+                    width: 66px;
+                    float: left;
+                }
+                .center {
+                    width: 66px;
+                    float: left;
+                }
+                .right {
+                    float: right;
+                    width: 66px;
+                }
                 p {
-                    height: 20px;
+                    height: 22px;
                     font-size: 12px;
-                    line-height: 20px;
+                    line-height: 22px;
                     margin: 0;
                     color: #666;
                 }
@@ -184,21 +266,27 @@
     font-size: 12px;
 }
 
-.panel-body {
-    padding: 7px;
-    height: 100%;
-    // padding-bottom: 20px;
+#collapseOne,
+#collapseTwo {
+    padding-left: 7px;
+    margin: 10px 0px;
 }
 
 .record_details {
+    width: 210px;
     background: #F9F9F9;
-    height: 140px;
-    margin-top: 10px;
+    height: 152px;
+    margin-bottom: 10px;
+    z-index: 999;
+    // border: 1px solid #ececec;
+    box-shadow: 0px 0px -40px #F9F9F9;
 }
 
 .searchStyle {
+    // display: none;
     height: 20px;
     font-size: 12px;
+    margin-bottom: 5px;
 }
 
 .inputStyle {
@@ -218,8 +306,10 @@
 
 .pagination {
     // width: 212;
+    display: none;
     height: 27px;
-    margin: 10px 0px;
+    margin-top: 10px;
+    margin-bottom: 0px;
     li:hover a {
         background: #5DB8FB;
     }
@@ -248,38 +338,46 @@
 //事件处理
 .event_list {
     display: none;
-    .event {
-        position: absolute;
+    // overflow: hidden;
+    position: absolute;
+    width: 228px;
+    top: 105px;
+    right: 40px;
+    z-index: 999;
+    box-shadow: 0px 0px 12px #888;
+    .event_title {
         font-size: 12px;
         color: #666;
-        top: 100px;
-        right: 40px;
-        z-index: 999;
-        box-shadow: 0px 0px 12px #888;
         overflow: hidden;
         background: rgba(88, 88, 88, 0.9);
-        margin: 0;
-        padding: 0;
         width: 228px;
+        height: 36px;
+        line-height: 36px;
         span {
             color: #fff;
-            font-size: 12px;
-            height: 30px;
-            line-height: 30px;
+            font-size: 14px;
+            height: 36px;
+            line-height: 36px;
             margin: 0px 15px;
+        }
+        .close_event {
+            display: inline-block;
+            width: 20px;
+            font-size: 20px;
+            cursor: pointer;
+            background: url(/src/images/map/closed.png) center no-repeat;
+            margin-right: 10px;
         }
     }
     .event_detail {
-        position: absolute;
-        font-size: 12px;
-        top: 130px;
-        right: 40px;
-        z-index: 999;
         overflow: hidden;
+        font-size: 12px;
         margin: 0;
         padding: 0;
         width: 228px;
-        background: #f3f3f3;
+        background: #fff;
+        border: 2px solid #ececec;
+        border-top: none;
         .event_show,
         .event_image {
             margin: 10px;
@@ -288,20 +386,21 @@
             font-size: 12px;
             .event_tab {
                 margin: 10px 0px 0px 5px;
+                overflow: hidden;
                 .left {
-                    display: inline-block;
-                    width: 60px;
-                    border-right: 1px solid #eaeaea;
+                    float: left;
+                    width: 50px;
                 }
                 .right {
-                    display: inline-block;
-                    margin-left: 8px;
+                    border-left: 1px solid #eaeaea;
+                    padding-left: 8px;
+                    margin-left: 55px;
+                    width: auto;
                 }
-                .address {
-                    background: #ebebeb url(/src/images/event/map_h.png) 5px 5px no-repeat;
+                .address1 {
+                    background: #ebebeb url(/src/images/event/map_h.png) 5px 3px no-repeat;
                     background-size: 10px;
                     padding: 2px;
-                    width: 130px;
                     span {
                         margin-left: 15px;
                     }
@@ -314,10 +413,19 @@
                     ;
                 }
             }
+            .eventdesc {
+                background: #ebebeb;
+                margin-top: 3px;
+                padding: 3px;
+            }
+            .eventpic_list {
+                margin-top: -10px;
+            }
         }
         .view_detail {
-            margin: 10px 10px 20px 10px;
+            margin: 10px;
             border: 1px solid #5ab7fd;
+            overflow: hidden;
             border-radius: 5px;
             .btn {
                 background: #fff;
@@ -327,6 +435,12 @@
                 font-size: 12px;
             }
         }
+        .first_event {
+            padding-top: 10px;
+        }
+        .last_event {
+            padding-bottom: 10px;
+        }
         .audioPlay {
             background: url(/src/images/task/play.png) no-repeat;
             width: 82px;
@@ -335,5 +449,22 @@
             display: inline-block;
             outline: none;
         }
+        .audioPlayIn {
+            background: url(/src/images/task/playIn.gif) no-repeat;
+            width: 82px;
+            height: 26px;
+            border: none;
+            display: inline-block;
+            outline: none
+        }
     }
+}
+
+.result {
+    min-height: 50px;
+    max-height: 200px;
+    // ul {
+    //     height: 100%;
+    //     overflow: auto;
+    // }
 }
