--- a/src/sass/task.scss
+++ b/src/sass/task.scss
@@ -143,21 +143,22 @@
 }
 
 #details {
-    top: 50%;
-    left: 50%;
-    width: 800px;
-    margin-left: -400px;
-    height: 600px;
-    margin-top: -300px;
+    // top: 50%;
+    // left: 50%;
+    // width: 800px;
+    // margin-left: -400px;
+    // height: 600px;
+    // margin-top: -300px;
     border-radius: 8px;
     font-size: 14px;
-    overflow: hidden;
+    // overflow: hidden;
     .modal-lg {
-        margin: 0;
-        width: 100%;
+        // margin: 0;
+        // width: 100%;
         .modal-content {
             width: 800px;
             height: 600px;
+            margin: 0 auto;
             .modal-header {
                 height: 40px;
                 background: #344052;
@@ -238,6 +239,8 @@
                                 background: #fff;
                                 min-height: 36px;
                                 border-left: 1px solid #ddd;
+                                word-wrap: break-word;
+                                word-break: normal;
                                 p {
                                     margin: 0;
                                 }
@@ -368,6 +371,8 @@
                                             margin-left: 70px;
                                             line-height: 26px;
                                             overflow: hidden;
+                                            word-wrap: break-word;
+                                            word-break: normal;
                                             .task_pic_list {
                                                 float: left;
                                                 border: 1px solid #f1f1f1;
