--- a/src/sass/track.scss
+++ b/src/sass/track.scss
@@ -15,7 +15,7 @@ $bgclr : #e7e8ec;
 }
 
 .big_modal .modal-dialog{
-    @include modal_size();
+    //@include modal_size();
     /*position: absolute;
     margin: 0;
     top: 50%;
@@ -92,6 +92,10 @@ $bgclr : #e7e8ec;
 
 /* 轨迹详情正文样式 */
 #gf_detail{
+    .modal-dialog{
+        width: 800px;
+        //@include modal_size(540px); /* 自定义模态框宽度 */
+    }
     .title{
         padding: 0 15px;
         line-height: 54px;
@@ -145,7 +149,8 @@ $bgclr : #e7e8ec;
 /* 人员列表正文样式 */
 #gf_people{
     .modal-dialog{
-        @include modal_size(540px); /* 自定义模态框宽度 */
+        width: 400px;
+        //@include modal_size(540px); /* 自定义模态框宽度 */
     }
 }
 
